Avoid breaks inside markdown images

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -301,12 +301,14 @@
   img {
     margin-top: 2em;
     margin-bottom: 2em;
+    break-inside: avoid;
   }
 
   picture {
     display: block;
     margin-top: 2em;
     margin-bottom: 2em;
+    break-inside: avoid;
 
     & > img {
       margin-top: 0;
